test/compile-errors/type-param-cant-have-type-args.crow
f[t] void(_ nat t)
	void
